--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
-body {
+body, html {
   margin: 0;
+  background-image: url("../public/rain-background.jpg");
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* .container {
+  width: '100vw';
+        height: '100vh';
+        background-image: `url(${backgroundImage})`;
+        background-position: 'center';
+        background-size: 'cover';
+        background-repeat: 'no-repeat';
+  background-color: rebeccapurple;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
