--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,14 +16,16 @@
   justify-content: space-between;
 }
 
+.header-inner a {
+  text-decoration: none;
+}
+
 .header-container .logo h1 {
   color: white;
   max-width: 100px;
-  vertical-align: middle;
 }
 
 .header-container .menu a {
-  text-decoration: none;
   color: #fff;
   font-weight: 500;
   transition: all .3s ease;
