--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -27,6 +27,8 @@
   clear: both;
   float: left;
   text-align: center;
+  position: relative;
+  top: 2rem;
 }
 
 .name {
@@ -37,15 +39,20 @@
   margin-bottom: 20px;
 }
 
-.colored {
-  color: blueviolet;
+.last-name {
+  color: #fff;
 }
 
-.job {
-  font-size: 25px;
-  font-weight: 500;
-  color: #a2a2a2;
-  margin-bottom: 40px;
+.non-colored {
+  color: transparent;
+	-webkit-text-stroke: 2px blueviolet;
+}
+
+.colored {
+  color: blueviolet;
+  position: absolute;
+  left: 29.5rem;
+	animation: flowtext 4s ease-in-out infinite;
 }
 
 .button {
@@ -68,26 +75,33 @@
   transition: all .3s ease;
 }
 
-/* .is-hidden {
-  transform: rotateX(180deg);
-  -webkit-animation: cd-rotate-1-out 1.2s;
-  animation: cd-rotate-1-out 1.2s;
-}
+@keyframes flowtext {
+	0%,
+	100% {
+		clip-path: polygon(
+			0% 45%,
+			16% 44%,
+			33% 50%,
+			54% 60%,
+			70% 61%,
+			84% 59%,
+			100% 52%,
+			100% 100%,
+			0% 100%
+		);
+	}
 
-.is-visible {
-  opacity: 1;
-  position: relative;
-  transform: rotateX(0deg);
-  -webkit-animation: cd-rotate-1-in 1.2s;
-  animation: cd-rotate-1-in 1.2s;
+	50% {
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
+	}
 }
-
-.headline b {
-  opacity: 0;
-  transform-origin: 50% 100%;
-  display: inline-block;
-  position: absolute;
-  white-space: nowrap;
-  left: 0;
-  top: 0;
-} */
