--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body, html {
   margin: 0;
-  background-image: url("../public/rain-background.jpg");
+  background-image: url("../public/home-background.jpg");
+  background-position: center center;
+  height: calc(var(--vh,1vh) * 100);
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,7 +14,18 @@ body, html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body::before {
+  background-color: rgba(0, 0, 0, 0.4);
+  content: '';
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
