--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,47 +1,46 @@
-.home-container {
-  position: fixed;
-  width: 900px;
-  top: 100px;
-  bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.active {
-  opacity: 1;
-  visibility: visible;
-  z-index: 10;
-}
-
-.home {
+.home-area {
+  background-color: #111;
+  background-image: url("../../../public/home-background.jpg");
+  background-position: center center;
+  height: calc(var(--vh,1vh) * 100);
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
-  width: 100%;
-  min-height: 100%;
-  display: flex;
-  align-items: center;
 }
 
-.home-inner {
-  width: 100%;
-  height: auto;
-  clear: both;
-  float: left;
-  text-align: center;
+.element-cover-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
-  top: 2rem;
 }
 
-.name {
+.element-cover-bg::before {
+  background-color: rgba(0, 0, 0, 0.45);
+  content: '';
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.home-area .text-center {
+  /* will move text up */
+  /* margin-bottom: 3rem; */
+}
+
+.home-area .home-name {
   color: #fff;
-  font-size: 72px;
+  font-size: 70px;
   font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  margin-top: 70px;
+  letter-spacing: 1px;
+  margin-bottom: 34px;
 }
 
-.last-name {
-  color: #fff;
+.last-name-container {
+  position: relative;
+  display: inline-block;
 }
 
 .non-colored {
@@ -52,28 +51,151 @@
 .colored {
   color: var(--accentColor);
   position: absolute;
-  left: 29.5rem;
+  left: 0;
 	animation: flowtext 4s ease-in-out infinite;
 }
 
-.button {
-  width: 100%;
-  height: auto;
-  clear: both;
-  float: left;
-  position: relative;
-  z-index: 5;
+.home-area .home-headline {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: .3px;
+  margin-bottom: 0;
 }
 
-.button a {
-  text-decoration: none;
-  color: #fff;
+.home-area .home-headline .single-headline {
   display: inline-block;
-  background-color: var(--accentColor);
-  padding: 10px 40px;
+  position: relative;
+  text-align: left;
+  vertical-align: top;
+}
+
+.home-area .home-headline .single-headline b.is-visible {
+  opacity: 1;
+  position: relative;
+}
+
+.home-area .home-headline .single-headline b {
+  display: inline-block;
+  font-weight: 400;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
+}
+
+.home-area .home-headline .single-headline::after {
+  background-color: #b9b9b9;
+  content: '';
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 2px;
+}
+
+.home-area .fixed-wrapper {
+  margin: 0 50px;
+  position: relative;
+}
+
+.home-area .fixed-wrapper .fixed-block.block-left {
+  left: 0;
+}
+
+.home-area .fixed-wrapper .fixed-block {
+  bottom: 34px;
+  position: absolute;
+}
+
+.home-area .fixed-wrapper .languages-list {
+  margin-bottom: 0;
+}
+
+.home-area .fixed-wrapper .languages-list a {
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.home-area .fixed-wrapper .languages-list .single-language {
+  -webkit-transform: rotate(90deg);
+  color: #e6e6e6;
+  display: block;
+  margin-top: 20px;
+  text-transform: uppercase;
+  transform: rotate(90deg);
+}
+
+.home-area .fixed-wrapper .fixed-block.block-right {
+  right: 0;
+}
+
+.home-area .fixed-wrapper .social-icons {
+  margin-bottom: 0;
+}
+
+.home-area .fixed-wrapper .social-icons > li {
+  line-height: 100%;
+  margin-top: 14px;
   text-align: center;
-  border-radius: 50px;
-  transition: all .3s ease;
+}
+
+.home-area .fixed-wrapper .social-icons .home-icon {
+  color: #f3f3f3;
+  font-size: 23px;
+  line-height: 100%;
+}
+
+@media (max-width: 991.98px)
+{
+  .home-area .home-name {
+    font-size: 62px;
+  }
+
+  .home-area .home-headline {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .home-area .fixed-wrapper {
+    display: none;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .home-area .home-name {
+    font-size: 48px;
+  }
+
+  .home-area .home-headline {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 992px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 576px;
+  }
 }
 
 @keyframes flowtext {
